dts/testData/inspections/requiredProperty/DeleteNodeRef.dts
/include/ "Declaration.dtsi"

&lable {
    phy-handle = "";
};

/delete-node/ &lable;

<error descr="Missing required properties: \"compatible\", \"phy-handle\"">&lable</error> {};
